--- a/styles/service.css
+++ b/styles/service.css
@@ -26,6 +26,11 @@ html, body{
       display: flex;
       list-style: none; 
       margin: auto;
+      transform: scale(1);
+      transition: .2s ease-in-out;
+  }
+  .sticky ul{
+    transform: scale(0);
   }
   .navbar a{
       text-decoration: none;
@@ -64,11 +69,11 @@ html, body{
       border: 1px solid rgb(49, 49, 66);
       border-left: none;
   }
-  .services a{
+  .services a, .navbar i{
     color: #9ADE7B;
   }
   
-  .gas-delivery{
+  .gas-delivery, .retail, .cylinder-cal, .cylinder-sales, .acessory-sales, .safet-wares, .corrosion-protection{
     border: 1px solid;
     width: 100%;
     height: 30rem;
@@ -105,7 +110,9 @@ html, body{
     height: 50rem;
     padding-left: 3rem;
 }
-
+.topic i{
+  color: #9ADE7B;
+}
 .topic h1{
     background-color: black;
     color: white;
