--- a/styles/style.css
+++ b/styles/style.css
@@ -254,7 +254,7 @@ form{
 }
 .form button[note]::after{
     content: attr(note);
-    display: flex;
+    display: none;
     opacity: 0;
     position: absolute;
     background-color: transparent;
@@ -390,5 +390,8 @@ form{
     }
     .form label{
         font-size: 20px;
+    }
+    .errorMessage{
+        display: none;
     }
   }
