--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,10 @@ a i{
     transform: scale(1);
     transition: .5s ease-in-out;
 }
-
+.mobile-menu ul, .mobile-menu{
+    display: none;
+    margin-block: 0px;
+}
 .carousel-img{
     width: 98%;
     margin: auto;
@@ -318,8 +321,38 @@ form{
 }
 
 @media only screen and (max-width: 995px) {
-    .navbar a{
+    .large-screen a{
         display: none;
+    }
+    .mobile-menu, .mobile-menu ul{
+        display: flex;
+    }
+    .mobile-menu{
+        flex-basis: 100%;
+        padding: auto;
+    }
+    .mobile-menu ul{
+        backdrop-filter: blur(10px);
+        flex-direction: column;
+        position: fixed;
+        z-index: 1000;
+        right: 0;
+        top: 0;
+        height: 100vh;
+        width: 100%;
+        justify-content: center;
+    }
+    .mobile-menu a, .mobile-menu i{
+        color: #262627;
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+    .close{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 50px;
     }
     .attributes{
         flex-direction: column;
@@ -356,6 +389,10 @@ form{
     .menu{
         display: flex;
     }
+    .footer i{
+        font-size: 14px;
+    }
+
     
   }
   @media only screen and (max-width:818px ){
@@ -381,12 +418,50 @@ form{
     }
   }
   @media only screen and (max-width: 510px){
+    *{
+        margin: 0;
+    }
+    .form-box{
+        width: 100%;
+        position: relative;
+        backdrop-filter: none;
+    }
+    .form{
+        position: absolute;
+        width: 350px;
+        height: 550px;
+        left: auto;
+        right: auto;
+        display: flex;
+        align-items: center;
+        padding-left: 0;
+       }
     .form input, .form select{
-        width: 12rem;
+        width: 100%;
+        border: none;
+        border-bottom: 4px solid black;
+        background-color: transparent;
+        margin: auto;
+        margin-bottom: 1rem;
+        outline: none;
+        transition: .2s ease-in-out;
+    }
+    .form input:focus{
+        border-color: #9ADE7B;
     }
     .form textarea{
-        width: 60%;
+        width: 100%;
         height: 5rem;
+        margin-inline: 0;
+        left: auto;
+        right: auto;
+        border-radius: .5rem;
+        padding: .5rem;
+        box-sizing: border-box;
+        box-shadow: 2px 12% 4px #bbb;
+    }
+    .form button{
+       padding-inline: 0;
     }
     .form label{
         font-size: 20px;
