--- a/styles/service.css
+++ b/styles/service.css
@@ -15,65 +15,75 @@ html, body{
     font-variation-settings:
       "wdth" 100;
   }
-  .navbar{
-      display: flex;
-      margin-top: 0;
-      width: 100%;
-      background-color: black;
-      padding: 3rem 0;
-  }
-  nav ul{
-      display: flex;
-      list-style: none; 
-      margin: auto;
-      transform: scale(1);
-      transition: .2s ease-in-out;
-  }
-  .sticky ul{
-    transform: scale(0);
-  }
-  .navbar a{
-      text-decoration: none;
-      margin-left: 2.5rem;
-      color: white;
-      font-weight: 700;
-      font-size: 20px;
-  }
-  .navbar a:hover{
-      color:#9ADE7B;
-  }
-  a i{
-      color: white;
-      font-size: 16px;
-      margin-right: 5px;
-  }
-  .menu{
-      position: absolute;
-      right: 1.5rem;
-  }
-  .menu:hover{
-      cursor: pointer;
-  }
-  .logo{
-      position: absolute;
-      padding: 2rem;
-      background-color: white;
-      top: -1rem;
-      left: 1px;
-      color: #9ADE7B;
-      border-top-right-radius: 100px;
-      border-bottom-right-radius: 100px;
-      font-weight: 700;
-      z-index: 1;
-      font-size: 20px;
-      border: 1px solid rgb(49, 49, 66);
-      border-left: none;
-  }
-  .services a, .navbar i{
-    color: #9ADE7B;
-  }
-  
-  .gas-delivery, .retail, .cylinder-cal, .cylinder-sales, .acessory-sales, .safet-wares, .corrosion-protection{
+
+.navbar{
+  display: flex;
+  width: 10v0w;
+  background-color: rgb(10, 15, 22);
+  padding: 1rem;
+  position: relative;
+}
+.logo{
+  display: flex;
+  align-items: center;
+}
+.logo span{
+  font-family: "Bevan", serif;
+  color: white;
+  text-align: center;
+}
+.navigations{
+  position: absolute;
+  right: 4rem;
+  top: 2rem;
+}
+.navigations ul{
+  display: flex;
+  gap: 2rem;
+}
+.navigations li:nth-child(2) a{
+  color: #9ADE7B;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: underline;
+  text-underline-offset: .5rem;
+  text-decoration-thickness: .1rem;
+}
+.navigations a{
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+  transition:  .5s ease-in-out ;
+  text-decoration-color: #9ADE7B;
+}
+.navigations a:hover{
+  color: #9ADE7B;
+  font-weight: 600;
+  font-size: 14px;
+  text-decoration: underline;
+  text-underline-offset: .5rem;
+  text-decoration-thickness: .1rem;
+}
+.navigations li:nth-child(2) a:hover{
+  font-size: 20px;
+}
+.services a:hover .navigations a{
+  text-decoration: none;
+} 
+
+a i{
+  color: #9ADE7B;
+  margin-right: .5rem;
+}
+.logo img{
+  width: 10vw;
+  clip-path: circle();
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.gas-delivery{
     border: 1px solid;
     width: 100%;
     height: 30rem;
@@ -97,9 +107,10 @@ html, body{
     flex-basis: 60%;
     /* border: 1px solid; */
     padding: 1rem;
+    margin-right: 2rem;
   }
   .sidebar{
-    flex-basis: 30%;
+    flex-basis: 40%;
     /* border: 1px solid; */
   }
 
@@ -109,10 +120,9 @@ html, body{
     border: none;
     height: 50rem;
     padding-left: 3rem;
+    width: 100%;
 }
-.topic i{
-  color: #9ADE7B;
-}
+
 .topic h1{
     background-color: black;
     color: white;
@@ -133,3 +143,28 @@ html, body{
 .topic p {
     margin-bottom: 2rem;
 }
+
+
+.sidebar{
+  margin-top: rem;
+  padding: 1rem 0 0 3rem;
+  position: relative;
+}
+
+.service-list{
+  display: flex;
+}
+.service-list ul{
+  list-style: none;
+}
+.service-list li{
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  letter-spacing: 3px;
+  font-weight: 600;
+}
+.service-list li a{
+  text-decoration: none;
+  color: #9ADE7B;
+}
+
