--- a/styles/service.css
+++ b/styles/service.css
@@ -73,7 +73,7 @@ html, body{
   text-decoration: none;
 } 
 
-a i{
+.navigations a i{
   color: #9ADE7B;
   margin-right: .5rem;
 }
@@ -84,7 +84,13 @@ a i{
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.menu{
+  color: white;
+  display: none;
+}
+.mobile-menu{
+  display: none;
+}
 .gas-delivery{
     border: 1px solid;
     width: 100%;
@@ -170,3 +176,51 @@ a i{
   color: #9ADE7B;
 }
 
+@media only screen and (max-width: 1040px) {
+  *{
+    overflow-x: hidden;
+  }
+  .navigations li a{
+    display: none;
+  }
+  .menu{
+    display: flex ;
+  }
+  .mobile-menu{
+    display: flex;
+    transform: scale(0);
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(60px);
+    transition: all .2s ease-in-out;
+  }
+  .mobile-menu ul{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 4rem;
+    list-style: none;
+  }
+  .mobile-menu a{
+    color: #262627;
+    text-decoration: none;
+    font-size: 1.5rem;
+  }
+  .mobile-menu i{
+    margin-right: 1rem;
+    color: #9ADE7B;
+  }
+  .close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+}
