--- a/styles/style.css
+++ b/styles/style.css
@@ -422,7 +422,7 @@ form{
   }
   @media only screen and (max-width:900px ){
     .logo img{
-        width: 15vh;
+        width: 8vw;
     }
     .motion{
         font-size: 12px;
